UI improvements in TableEditor, minor CSS fixes and refactoring

--- a/src/www/js/EditionComposer/EditionComposer.css
+++ b/src/www/js/EditionComposer/EditionComposer.css
@@ -459,7 +459,6 @@ b.blot-sigla {
 /* Collation Table Panel */
 
 #collation-table .panel-content {
-    padding: 1rem;
 }
 
 th.highlight {
